# DockerOpenGLTest

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  shader.hpp
config/: conan.cmake  conanfile.txt
src/: CMakeLists.txt  main.cpp
