find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
find_package(glfw3 REQUIRED)
find_package(glm REQUIRED)
find_package(fmt REQUIRED)

add_executable(gl main.cpp)
target_include_directories(gl PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(gl PRIVATE OpenGL::GL GLEW::GLEW glm::glm glfw fmt::fmt)
target_compile_features(gl PRIVATE cxx_std_20)